# LEAP

./: .gitignore  .readthedocs.yaml  BACKEND.md  CMakeLists.txt  Dockerfile  INTRO.md  LICENSE  README.md  manual_install.py  requirements.txt  setup.cfg  setup.py  setup_AMD.py  setup_ctype.py  setup_old.py
VAM/: VAM.py  testVAM.py
demo/: TVGPUClass.py  speedTest.py  test_ctype.py  test_ctype_helical.py  test_ctype_modularBeam.py  test_ctype_symmetricObjects.py  test_project.py  test_recon_FBP.py  test_recon_NN.py  test_recon_TV.py  test_recon_TV_2.py  verificationTests.py
demo/sample_data/: FORBILD_head_512_fbp.npy  FORBILD_head_512_sino.npy  FORBILD_head_64_sino.npy  FORBILD_head_64_sino_TV.npy  param_parallel64.cfg  param_parallel80.cfg
demo_leapctype/: RDLS.py  d01_standard_geometries.py  d02_standard_geometries_torch.py  d03_helical.py  d04_modularbeam.py  d05_3DflashCT.py  d06_ART.py  d07_symmetric_objects.py  d08_ray_tracing_simulation.py  d09_curved_polygon_detector_array.py  d10_fan_to_parallel_rebinning_and_cone-parallel.py  d11_fileIO.py  d12_geometric_calibration.py  d13_cropping_subchunking.py  d14_outlierCorrection.py  d15_detector_deblur.py  d16_ring_removal.py  d17_beam_hardening.py  d19_dual_energy_decomposition_and_SIRZ.py  d21_walnut.py  d22_truncatedScan.py  d23_offsetScan.py  d24_circle_plus_line.py  d25_detector_dithering.py  d26_preconditioners.py  d27_dictionaryDenoising.py  d28_BilateralFilter.py  d29_filter_sequence.py  d30_MAR_and_sinogram_replacement.py  d31_scatter_correction.py  d32_laminography.py  d33_reducingConeBeamArtifacts.py  d34_iterative_reconstruction_long_object.py  d35_volume_masking.py  d36_ball_phantom_calibration.py  d36_system_matrix.py  d37_spectral_calibration.py  d38_system_matrix.py  d98_SF_vs_VD.py  d99_speedTest.py  (+21 more)
demo_leapctype/sample_data/: conebeam_geometry.txt
demo_leaptorch/: _TV.npy  test_fproject_and_FBP.py  test_project_and_FBP.py  test_recon_NN.py  test_recon_TV.py  test_recon_projections_NN.py
demo_leaptorch/sample_data/: FORBILD_head_512.npy  FORBILD_head_64.npy  FORBILD_head_64_sino.npy  FORBILD_head_64_sino_FBP.npy  param_example.cfg  param_parallel512.cfg  readme.txt
docs/: conf.py  docs_requirements.txt
docs/source/: conf.py  ctgeometries.rst  ctsimulation.rst  ctvolume.rst  fbp.rst  fileIO.rst  filter_sequence.rst  filters.rst  highlevelfunctions.rst  index.rst  install.rst  iterative_reconstruction.rst  leapctype.rst  leaptorch.rst  physics_based_preprocessing_algorithms.rst  preprocessing_algorithms.rst  projection_filters_and_transforms.rst  projectors.rst  volume_filters_and_transforms  volume_filters_and_transforms.rst
documentation/: ESF.eps  ESF_zoom.eps  LEAP.tex  MTF.eps  coneBeamSketch.tex  rampFilter.tex
etc/: build.sh  win_build.bat  win_build_agn.bat  win_build_vs_2022.bat
results/: LEAP_features.md  SF_vs_VD.md
src/: CMakeLists.txt  __init__.py  analytic_ray_tracing.cpp  analytic_ray_tracing.h  analytic_ray_tracing_gpu.cu  analytic_ray_tracing_gpu.cuh  backprojectors_VD.cu  backprojectors_VD.cuh  bilateral_filter.cu  bilateral_filter.cuh  cpu_CMakeLists.txt  cpu_utils.cpp  cpu_utils.h  cuda_utils.cpp  cuda_utils.cu  cuda_utils.h  file_io.cpp  file_io.h  filtered_backprojection.cpp  filtered_backprojection.h  find_center_cpu.cpp  find_center_cpu.h  geometric_calibration.cu  geometric_calibration.cuh  guided_filter.cu  guided_filter.cuh  hip_utils.h  leap_defines.h  leap_filter_sequence.py  leap_preprocessing_algorithms.py  leapctype.py  leaptorch.py  leaptorch_xyz.py  list_of_tomographic_models.cpp  list_of_tomographic_models.h  log.h  main_projector.cpp  main_projector_ctype.cpp  main_projector_ctype.h  makefile  (+68 more)
unitTests/: FORBILD_head.pd  FORBILD_head_noEar.pd  memory_leak_tests.py  unit_tests.py  verificationTests.py
utils/: bridgeToLTT.py  generateDictionary.py  generateRidgeletDictionary.py  leapctserver.py  preprocessing_algorithms.py  symmetric_projectors.py  tigre_geometry_bridge.py
